cmake_minimum_required(VERSION 3.24)
project(offer)

set(CMAKE_CXX_STANDARD 17)

add_executable(offer main.cpp offer-07.cpp offer-07.h offer-87.cpp offer-87.h offer-54.cpp offer-54.h offer-09.cpp offer-09.h offer-079.cpp offer-079.h offer-reverse.h offer-18.h offer-19.h offer2-41.h offer-29.h offer-25.h offer-26.h offer-21.h offer-27.h offer28.h offer-30.h offer-62.h)
add_executable(offer main.cpp offer-07.cpp offer-07.h offer-87.cpp offer-87.h offer-54.cpp offer-54.h offer-09.cpp offer-09.h offer-079.cpp offer-079.h offer-11.cpp offer-11.h offer-012.cpp offer-012.h offer-14.h offer-15.cpp offer-15.h offer-16.cpp offer-16.h offer-17.h offer2/offer2-27.h offer2/total-206.h offer29.h)
